Fix Text Overflow

--- a/static/document_detail.css
+++ b/static/document_detail.css
@@ -17,7 +17,8 @@
 }
 
 #doc-content {
-    white-space: pre;
+    white-space: pre-line;
+    word-wrap: break-word;
 }
 
 #doc-content img {
